--- a/style/home.css
+++ b/style/home.css
@@ -1,3 +1,9 @@
+:root {
+  --primary-color:#00a141;
+  --secondary-color:#3dcf77;
+  --bg-color:#e1ffed;
+  --secondary-font:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 *{
   margin: 0;
   padding: 0;
@@ -29,75 +35,102 @@ body{
 }
 
 .search-box {
-  display: flex;
-  gap: 10px;
   margin-bottom: 15px;
+  height: 20px;
+  width: 64vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 50px;
+  position: relative;
 }
 
 .search-box input {
-  flex: 1;
-  padding: 10px;
-  border-radius: 8px;
-  border: 1px solid #ccc;
+  position: relative;
+  height: 170%;
+  width: 75%;
+  border: 1px solid var(--primary-color);
+  border-radius: 40px 8px 8px 40px;
+  font-size: 16px;
+  padding-left: 20px;
+  padding-top: 20px;
+  padding-bottom: 0px;
+  outline-color: var(--primary-color);
 }
 
+.Enter-pincode{
+  position:absolute;
+  top: 3px;
+  left: 18px;
+  padding:0px 5px;
+  transition:0.25s;
+  font-size: 17px;
+  color: gray;
+  pointer-events: none;
+  font-family: var(--secondary-font);
+}
+
+.input-text:focus + .Enter-pincode, .input-text:valid + .Enter-pincode{
+    top: -10px;
+    font-size: 12px;
+  }
+
 .search-box button {
-  padding: 10px 15px;
+  height:170%;
+  width: auto;
+  padding: 28px 20px;
   border: none;
-  background: #007bff;
+  background: var(--primary-color);
   color: white;
-  border-radius: 8px;
+  border-radius: 8px 40px 40px 8px;
   cursor: pointer;
+  font-size: 16px;
+  font-family: var(--secondary-font);
 }
 
 #locBtn {
-  margin: 10px 0;
-  padding: 10px;
-  width: 100%;
+  margin: 30px 0;
+  padding: 15px;
+  width: 70%;
   border: none;
-  background: #28a745;
+  font-size: 17px;
+  font-family: var(--secondary-font);
+  background: var(--primary-color);
   color: white;
-  border-radius: 8px;
+  border-radius: 80px;
   cursor: pointer;
+}
+
+#or{
+  margin-top: 30px;
+  font-size: 18px;
+  font-family: var(--secondary-font);
+  height: 40px;
+  width: 100%;
+}
+#or div{
+  height: 40px;
+  width: 40px;
+  color: black;
+  font-weight: 900;
+  border: 3px solid black;
+  border-radius: 50px;
 }
 
 .range-box {
   margin-top: 20px;
 }
+.range-box label {
+  font-size: 16px;
+  color: black;
+  font-family: var(--secondary-font);
+  font-weight: 600;
+}
 
 .range-box input {
   width: 100%;
-}
-
-/* 🔄 Loader Background */
-#loader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #ffffff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 9999;
-}
-
-/* 🌀 Spinner */
-.spinner {
-  width: 50px;
-  height: 50px;
-  border: 5px solid #ddd;
-  border-top: 5px solid #007bff;
-  border-radius: 50%;
-  animation: spin 1s linear infinite;
-}
-
-/* Animation */
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
+  accent-color: var(--primary-color);
+  margin-top: 10px;
 }
 
 /* Hide loader */
