--- a/style/result.css
+++ b/style/result.css
@@ -2,7 +2,7 @@
   --primary-color:#00a141;
   --secondary-color:#3dcf77;
   --bg-color:#e1ffed;
-
+  --font-family: var(--secondary-font);
 }
 /* 🌍 Page */
 body {
@@ -46,14 +46,16 @@ h1 {
   height: 100%;
   width: 100%;
   margin: 10px;
-  border-radius: 12px;
+  border-radius: 20px;
   overflow: hidden;
+  border: 3px solid var(--primary-color);
 }
 
 /* 📦 Places Container */
 #places {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  grid-template-rows: repeat(9, 31vh);
   gap: 15px;
   padding: 15px;
   grid-area: 1/3/3/4;
@@ -72,6 +74,10 @@ h1 {
   flex-direction: column;
   justify-content: start;
   align-items: center;
+}
+
+.card-content {
+  width: 100%;
 }
 
 /* ✨ Hover effect */
@@ -98,7 +104,10 @@ h1 {
   text-align: center;
 }
 .distance {
-  font-size: 13px;
+  width: 100%;
+  font-size: 14px;
+  font-family: var(--secondary-font);
+
   color: black;
   position: absolute;
   bottom: 10px;
@@ -123,15 +132,6 @@ select, input[type="range"] {
   padding: 5px;
   border-radius: 6px;
   border: 1px solid #ccc;
+  accent-color: var(--primary-color);
 }
 
-/* 📱 Responsive tweak */
-@media (max-width: 500px) {
-  #map {
-    height: 250px;
-  }
-
-  .card img {
-    height: 100px;
-  }
-}
